force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <description>Stores transactional data synchronized from QuickBooks Online after successful invoice creation.</description>
    <label>Invoice</label>
    <nameField>
        <displayFormat>INV-{MM}{DD}{YY}-{000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>