force-app/main/default/objects/Invoice__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The date the payment is due, typically calculated via QBO based on Net Terms.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>