force-app/main/default/objects/Invoice__c/fields/Invoice_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Creation_Date__c</fullName>
    <description>The timestamp when the record was established in QBO (maps to time in response)</description>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>