force-app/main/default/objects/Invoice__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <label>Payment Term</label>
    <length>32</length>
    <type>Text</type>
</CustomField>