force-app/main/default/objects/Invoice__c/fields/QBO_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>QBO_Invoice_ID__c</fullName>
    <description>External ID &amp; Unique. The unique internal ID returned by QuickBooks (maps to Invoice.Id in response)</description>
    <externalId>true</externalId>
    <label>QBO Txn Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>