force-app/main/default/objects/Invoice__c/fields/Ready_for_Integration__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Integration Gatekeeper. When checked (True), signals to the Scheduled Batch that all related Work Orders for the Account/Date are completed and the record is ready for QuickBooks sync.</description>
    <label>Ready for Integration</label>
    <type>Checkbox</type>
</CustomField>