force-app/main/default/objects/Invoice__c/fields/Sales_T__c.field-meta.xml
<CustomField>
    <fullName>Sales_T__c</fullName>
    <label>Sales tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>