force-app/main/default/objects/Invoice__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>The final total calculated by the billing system (maps to TotalAmt)</description>
    <label>Invoice total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>