force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Status__c</columns>
    <columns>Account__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Ready_for_Integration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>